horizontal scroll fixed

--- a/personalisation.css
+++ b/personalisation.css
@@ -140,13 +140,12 @@ body {
   align-items: center;
   color: #e4066e;
   height: 100vh;
-  overflow: hidden;
 }
 .text-showcase .text-showcase-input{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 80%;
+  width: 90%;
   height: 50px;
   border: 1px solid brown;
   background-color: lightgray;
@@ -162,21 +161,21 @@ body {
   font-weight: 500;
   
 }
-.text-showcase .font-choose {
-  height: 50%;
+ .font-choose {
+  height: 350px;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-}
-.font-container-btn {
   overflow: hidden;
   overflow-y: scroll;
 }
-.font-choose button {
+
+.overflow-btn {
   width: 100%;
   height: 150px;
+  background-color: #408ab4;
+  border: 1px solid black ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* colors */
 .after-click-colors {
@@ -365,31 +364,26 @@ body {
   .text-showcase-header{
     display: none;
   }
- 
   .text-showcase {
     display: flex;
     justify-content: flex-start;
-
+    padding-top: 5px;
   }
-  .text-showcase .font-choose {
+  .font-choose{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 25%;
     height: 100px;
     width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    gap: 5px;
     overflow: hidden;
-    overflow-x: scroll;
-    margin-top: 10px;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    padding: 5px;
   }
-  .font-container-btn {
-   display: flex;
-   justify-content: space-around;
-   height: 100%;
-   overflow: hidden;
-  }
-  .font-choose button {
-    width: 200px;
-    height: 100px;
+  .overflow-btn{
+    height: 100%;
+    padding: 5px;
   }
   .main-section {
     display: block;
